--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --progress --mode=production",  
-    "watch": "webpack --progress --watch" 
+    "build": "webpack --progress --mode=production",
+    "watch": "webpack --progress --watch"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/BiniyamDS/npmApp#readme",
   "dependencies": {
-    "dayjs": "^1.11.10"
+    "dayjs": "^1.11.10",
+    "micromodal": "^0.4.10"
   },
   "devDependencies": {
     "webpack": "^5.90.3",
